package com.github.davidmoten.reels;

public interface Worker extends CanSchedule, Disposable {

}
